src/test/ui/impl-trait/unactionable_diagnostic.stderr
error[E0309]: the opaque type `foo<T>::{opaque#0}` may not live long enough
  --> $DIR/unactionable_diagnostic.rs:19:5
   |
LL |     foo(post, x)
   |     ^^^^^^^^^^^^
   |
help: consider adding an explicit lifetime bound...
   |
LL | ) -> &'x impl Trait + 't {
   |                     ++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0309`.
